apps/drawio/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drawio
  namespace: drawio
  labels:
    app.kubernetes.io/name: drawio
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: drawio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drawio
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 999
        fsGroup: 999
      containers:
        - name: drawio
          image: jgraph/drawio:31.7.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              port: 8080
              path: /
            initialDelaySeconds: 12
            failureThreshold: 5
            timeoutSeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              port: 8080
              path: /
            initialDelaySeconds: 10
            failureThreshold: 4
            timeoutSeconds: 5
            periodSeconds: 12
          startupProbe:
            httpGet:
              port: 8080
              path: /
            initialDelaySeconds: 10
            failureThreshold: 60
            timeoutSeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 512Mi
